# zpi-evolutionary-planner

./: .gitignore  README.md  docker-compose-demo.yml  docker-compose.yml  package-lock.json
backend/: .env.example  Dockerfile  Dockerfile.demo  README.md
backend/backend/: settings.py
backend/backend/middleware/: jwt_cookie_middleware.py
backend/identity/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
backend/identity/migrations/: 0001_initial.py  0002_user_organization.py
backend/optimizer/: admin.py  logger.py  models.py  serializers.py  services.py  urls.py  views.py
backend/optimizer/migrations/: 0001_initial.py
backend/preferences/: PREFS_STRUCTURE.md  admin.py  models.py  serializers.py  urls.py  views.py
backend/preferences/migrations/: 0001_initial.py
backend/scheduling/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/scheduling/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
frontend/components/: Background.js  PreferenceModal.js  ScheduleColumn.js  ScheduleSlot.js
frontend/components/admin/: ConfirmModal.js  MsgModal.js  RecBanHours.js  SingleRoom.js  SingleUser.js
frontend/components/adminsubpgs/: MsgModal.js  SingleRoom.js  SingleUser.js  confirmModal.js
frontend/components/general/: AuthCard.js  Navbar.js
frontend/components/navbar/: Navbar.js
frontend/contexts/: AuthContext.js
frontend/evoplanner_frontend/components/: EntriesSidebar.js  ScheduleColumn.js  ScheduleHeader.js
frontend/evoplanner_frontend/hooks/: usePreferences.js  useRecruitments.js  useScheduleDrag.js
frontend/evoplanner_frontend/pages/: _app.js  contact.js  entries.js  login.js  plan.js
frontend/evoplanner_frontend/utils/: schedule.js  scheduleDisplay.js  (+1 more)
frontend/hooks/: useEventModal.js  useGridDimensions.js  useGroupMembers.js  useGroups.js  useHeatmap.js  usePlanSchedule.js  usePreferences.js  useRoomData.js  useScheduleDragCustom.js  useScheduleModal.js  useTags.js  useUserData.js
frontend/pages/: _app.js  _document.js  about.js  features.js  index.js  login.js
frontend/utils/: planUtils.js  scheduleDisplay.js
optimizer_service/: CMakeLists.txt  Dockerfile  README.md
optimizer_service/data/input/: THE-new-input-updated.json  THE2.json  _prefs_names.json  input-easy.json  input-medium.json  new-input-easy.json  new-input-updated.json  test-simple.json
optimizer_service/include/model/: EventModels.hpp  ProblemData.hpp
optimizer_service/include/optimization/: Evaluator.hpp  ExampleGeneticAlgorithm.hpp  IGeneticAlgorithm.hpp  ZawodevGeneticAlgorithm.hpp
optimizer_service/include/utils/: TestCaseGenerator.hpp
optimizer_service/src/: main.cpp
optimizer_service/src/event/: EventReceiver.cpp  EventSender.cpp
optimizer_service/src/model/: EventModels.cpp  ProblemData.cpp
optimizer_service/src/optimization/: Evaluator.cpp  ExampleGeneticAlgorithm.cpp  ZawodevGeneticAlgorithm.cpp
optimizer_service/src/utils/: JsonParser.cpp  TestCaseGenerator.cpp
(+79 files in other folders)
